--- a/motorCortex_gainTask.ipynb
+++ b/motorCortex_gainTask.ipynb
@@ -556,150 +556,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function corrcoef in module numpy:\n",
-      "\n",
-      "corrcoef(x, y=None, rowvar=True, bias=<no value>, ddof=<no value>, *, dtype=None)\n",
-      "    Return Pearson product-moment correlation coefficients.\n",
-      "    \n",
-      "    Please refer to the documentation for `cov` for more detail.  The\n",
-      "    relationship between the correlation coefficient matrix, `R`, and the\n",
-      "    covariance matrix, `C`, is\n",
-      "    \n",
-      "    .. math:: R_{ij} = \\frac{ C_{ij} } { \\sqrt{ C_{ii} C_{jj} } }\n",
-      "    \n",
-      "    The values of `R` are between -1 and 1, inclusive.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    x : array_like\n",
-      "        A 1-D or 2-D array containing multiple variables and observations.\n",
-      "        Each row of `x` represents a variable, and each column a single\n",
-      "        observation of all those variables. Also see `rowvar` below.\n",
-      "    y : array_like, optional\n",
-      "        An additional set of variables and observations. `y` has the same\n",
-      "        shape as `x`.\n",
-      "    rowvar : bool, optional\n",
-      "        If `rowvar` is True (default), then each row represents a\n",
-      "        variable, with observations in the columns. Otherwise, the relationship\n",
-      "        is transposed: each column represents a variable, while the rows\n",
-      "        contain observations.\n",
-      "    bias : _NoValue, optional\n",
-      "        Has no effect, do not use.\n",
-      "    \n",
-      "        .. deprecated:: 1.10.0\n",
-      "    ddof : _NoValue, optional\n",
-      "        Has no effect, do not use.\n",
-      "    \n",
-      "        .. deprecated:: 1.10.0\n",
-      "    dtype : data-type, optional\n",
-      "        Data-type of the result. By default, the return data-type will have\n",
-      "        at least `numpy.float64` precision.\n",
-      "    \n",
-      "        .. versionadded:: 1.20\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    R : ndarray\n",
-      "        The correlation coefficient matrix of the variables.\n",
-      "    \n",
-      "    See Also\n",
-      "    --------\n",
-      "    cov : Covariance matrix\n",
-      "    \n",
-      "    Notes\n",
-      "    -----\n",
-      "    Due to floating point rounding the resulting array may not be Hermitian,\n",
-      "    the diagonal elements may not be 1, and the elements may not satisfy the\n",
-      "    inequality abs(a) <= 1. The real and imaginary parts are clipped to the\n",
-      "    interval [-1,  1] in an attempt to improve on that situation but is not\n",
-      "    much help in the complex case.\n",
-      "    \n",
-      "    This function accepts but discards arguments `bias` and `ddof`.  This is\n",
-      "    for backwards compatibility with previous versions of this function.  These\n",
-      "    arguments had no effect on the return values of the function and can be\n",
-      "    safely ignored in this and previous versions of numpy.\n",
-      "    \n",
-      "    Examples\n",
-      "    --------\n",
-      "    In this example we generate two random arrays, ``xarr`` and ``yarr``, and\n",
-      "    compute the row-wise and column-wise Pearson correlation coefficients,\n",
-      "    ``R``. Since ``rowvar`` is  true by  default, we first find the row-wise\n",
-      "    Pearson correlation coefficients between the variables of ``xarr``.\n",
-      "    \n",
-      "    >>> import numpy as np\n",
-      "    >>> rng = np.random.default_rng(seed=42)\n",
-      "    >>> xarr = rng.random((3, 3))\n",
-      "    >>> xarr\n",
-      "    array([[0.77395605, 0.43887844, 0.85859792],\n",
-      "           [0.69736803, 0.09417735, 0.97562235],\n",
-      "           [0.7611397 , 0.78606431, 0.12811363]])\n",
-      "    >>> R1 = np.corrcoef(xarr)\n",
-      "    >>> R1\n",
-      "    array([[ 1.        ,  0.99256089, -0.68080986],\n",
-      "           [ 0.99256089,  1.        , -0.76492172],\n",
-      "           [-0.68080986, -0.76492172,  1.        ]])\n",
-      "    \n",
-      "    If we add another set of variables and observations ``yarr``, we can\n",
-      "    compute the row-wise Pearson correlation coefficients between the\n",
-      "    variables in ``xarr`` and ``yarr``.\n",
-      "    \n",
-      "    >>> yarr = rng.random((3, 3))\n",
-      "    >>> yarr\n",
-      "    array([[0.45038594, 0.37079802, 0.92676499],\n",
-      "           [0.64386512, 0.82276161, 0.4434142 ],\n",
-      "           [0.22723872, 0.55458479, 0.06381726]])\n",
-      "    >>> R2 = np.corrcoef(xarr, yarr)\n",
-      "    >>> R2\n",
-      "    array([[ 1.        ,  0.99256089, -0.68080986,  0.75008178, -0.934284  ,\n",
-      "            -0.99004057],\n",
-      "           [ 0.99256089,  1.        , -0.76492172,  0.82502011, -0.97074098,\n",
-      "            -0.99981569],\n",
-      "           [-0.68080986, -0.76492172,  1.        , -0.99507202,  0.89721355,\n",
-      "             0.77714685],\n",
-      "           [ 0.75008178,  0.82502011, -0.99507202,  1.        , -0.93657855,\n",
-      "            -0.83571711],\n",
-      "           [-0.934284  , -0.97074098,  0.89721355, -0.93657855,  1.        ,\n",
-      "             0.97517215],\n",
-      "           [-0.99004057, -0.99981569,  0.77714685, -0.83571711,  0.97517215,\n",
-      "             1.        ]])\n",
-      "    \n",
-      "    Finally if we use the option ``rowvar=False``, the columns are now\n",
-      "    being treated as the variables and we will find the column-wise Pearson\n",
-      "    correlation coefficients between variables in ``xarr`` and ``yarr``.\n",
-      "    \n",
-      "    >>> R3 = np.corrcoef(xarr, yarr, rowvar=False)\n",
-      "    >>> R3\n",
-      "    array([[ 1.        ,  0.77598074, -0.47458546, -0.75078643, -0.9665554 ,\n",
-      "             0.22423734],\n",
-      "           [ 0.77598074,  1.        , -0.92346708, -0.99923895, -0.58826587,\n",
-      "            -0.44069024],\n",
-      "           [-0.47458546, -0.92346708,  1.        ,  0.93773029,  0.23297648,\n",
-      "             0.75137473],\n",
-      "           [-0.75078643, -0.99923895,  0.93773029,  1.        ,  0.55627469,\n",
-      "             0.47536961],\n",
-      "           [-0.9665554 , -0.58826587,  0.23297648,  0.55627469,  1.        ,\n",
-      "            -0.46666491],\n",
-      "           [ 0.22423734, -0.44069024,  0.75137473,  0.47536961, -0.46666491,\n",
-      "             1.        ]])\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(np.corrcoef)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 84,
    "outputs": [
     {
@@ -764,50 +620,6 @@
    "source": [
     "### But maybe the range is different?\n",
     "    - for each neuron calculate the absolute difference between the ranges of different conditions\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(256,)"
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unitRates.shape\n",
-    "unitRange = list(np.ptp(unitRates,axis=0))\n",
-    "\n",
-    "test = [abs(x-y) for x in unitRange for y in unitRange]\n",
-    "x = np.array(test).reshape(16,16,order='F');\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "256"
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "16*16"
    ],
    "metadata": {
     "collapsed": false
@@ -923,26 +735,6 @@
     "plt.xlabel('dimensions');\n",
     "plt.ylabel('fraction total variance');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[4],\n       [5],\n       [6],\n       [7]])"
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "idx"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
   },
   {
    "cell_type": "code",
@@ -1240,6 +1032,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "outputs": [],
    "source": [],
    "metadata": {
